ver-3-optimized-css

--- a/styles.css
+++ b/styles.css
@@ -1,124 +1,59 @@
-
 /* Animal trading Cards project for udacit #fend Google Schoolership 2017-2018
 By : Husien Adel
 2/20/2018, 12:53:03 AM
 */
 
-abbr, article, aside, audio, blockquote, body, code, div, em, fieldset, footer, form, h1, h2, h3, h4, h5, h6, header, html, iframe, img, label, legend, li, nav, object, ol, p, pre, section, small, span, strong, sub, sup, table, tbody, td, tfoot, th, thead, time, tr, ul, video {
+body, div, span, h3, html, img, li, p, ul {
    padding: 0;
    border: 0;
    margin: 0;
    background: 0 0;
    font-size: 100%;
    font-weight: inherit;
-   vertical-align: baseline
-}
-
-input[type=checkbox], th {
-   vertical-align: bottom
-}
-
-article, aside, figure, footer, header, nav, section {
-   display: block
+   vertical-align: baseline;
+   -webkit-box-sizing: border-box;
+   -moz-box-sizing: border-box;
+   box-sizing: border-box;
 }
 
 html {
    box-sizing: border-box;
-   overflow-y: scroll
+   overflow-y: scroll;
+   font-size: 16px;
+   font-family: "Noto Sans", "san-serif", serif, arial, tahoma;
 }
 
 *, ::after, ::before {
    box-sizing: inherit
 }
 
-img, object {
-   max-width: 100%
-}
-
 ul {
-   list-style: none
-}
-
-table {
-   border-collapse: collapse;
-   border-spacing: 0
-}
-
-th {
-   font-weight: 700
-}
-
-td {
-   font-weight: 400;
-   vertical-align: top
-}
-
-input, select {
-   vertical-align: middle
-}
-
-input[type=radio] {
-   vertical-align: text-bottom
-}
-
-strong {
-   font-weight: 700
-}
-
-input[type=file], label {
-   cursor: pointer
-}
-
-input, select, textarea {
-   border: 0;
-   margin: 0
-}
-
-button, input[type=button], input[type=submit] {
-   padding: 0;
-   border: 0;
-   border-radius: 0;
-   margin: 0;
-   background: 0 0;
-   cursor: pointer
-}
-
-button::-moz-focus-inner {
-   padding: 0;
-   border: 0
-}
-
-html {
-   font-size: 16px;
+   list-style: none;
 }
 
 body {
-   padding: 0;
-   margin: 0;
-   font-family: "Noto Sans", "san-serif", "serif", arial, tahoma;
    background-color: #fcfcfc;
 }
 
 .container {
-   width: 385px;
+   width: 330px;
    border: 1px solid #ccc;
-   padding: 15px 15px;
-   margin: 15px auto;
    background-color: #fff;
-   -webkit-box-shadow: 7px 7px 0px rgba(0, 0, 0, 0.1);
-   box-shadow: 7px 7px 0px rgba(0, 0, 0, 0.1);
+   padding: 0 15px;
+   margin: 10px auto;
+   -webkit-box-shadow: 6px 6px 0px rgba(0, 0, 0, 0.1);
+   box-shadow: 6px 6px 0px rgba(0, 0, 0, 0.1);
 }
 
 .container h3 {
-   font: 2rem/1.8 'Noto Sans', 'san-serif', Arial, serif;
+   font-size: 1.8rem;
+   line-height: 1.8;
    text-transform: capitalize;
-   text-transform: uppercase;
-   color: brown
+   color: brown;
 }
 
 .container img {
-   width: 100%;
-   max-width: 100%;
+   width: 300px;
 }
 
 .fun-facts {
@@ -127,12 +62,14 @@ body {
 
 .animal-information {
    border: 1px solid #ccc;
-   margin: 10px 0;
+   width: 300px;
    padding: 15px;
+   margin: 10px 0 14px;
+   background-image: linear-gradient(135deg, #fdfcfb 0%, #e2d1c3 100%);
 }
 
 .animal-information ul {
-   padding: 15px 0px;
+   padding: 10px 0;
 }
 
 .animal-information ul li {
@@ -146,11 +83,7 @@ body {
    font-weight: bold;
 }
 
-.container p:last-child {
-   margin-bottom: 20px;
-}
-
 .container p {
    line-height: 1.5;
-   text-align: justify;
+   text-align: left;
 }
