--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,6 @@
 By : Husien Adel
 2/20/2018, 12:53:03 AM
 */
-
 body, div, span, h3, html, img, li, p, ul {
    padding: 0;
    border: 0;
@@ -11,78 +10,64 @@ body, div, span, h3, html, img, li, p, ul {
    font-size: 100%;
    font-weight: inherit;
    vertical-align: baseline;
-   -webkit-box-sizing: border-box;
-   -moz-box-sizing: border-box;
    box-sizing: border-box;
 }
-
 html {
    box-sizing: border-box;
    overflow-y: scroll;
    font-size: 16px;
    font-family: "Noto Sans", "san-serif", serif, arial, tahoma;
 }
-
-*, ::after, ::before {
+*, :after, :before {
    box-sizing: inherit
 }
-
 ul {
    list-style: none;
 }
-
 body {
    background-color: #fcfcfc;
 }
-
 .container {
    width: 330px;
    border: 1px solid #ccc;
    background-color: #fff;
    padding: 0 15px;
    margin: 10px auto;
-   -webkit-box-shadow: 6px 6px 0px rgba(0, 0, 0, 0.1);
    box-shadow: 6px 6px 0px rgba(0, 0, 0, 0.1);
 }
-
 .container h3 {
+   font-size: 28.8px;
    font-size: 1.8rem;
    line-height: 1.8;
    text-transform: capitalize;
    color: brown;
 }
-
 .container img {
    width: 300px;
 }
-
 .fun-facts {
    font-style: italic;
 }
-
 .animal-information {
    border: 1px solid #ccc;
    width: 300px;
    padding: 15px;
    margin: 10px 0 14px;
+   background-image: -webkit-linear-gradient(315deg, #fdfcfb 0%, #e2d1c3 100%);
    background-image: linear-gradient(135deg, #fdfcfb 0%, #e2d1c3 100%);
 }
-
 .animal-information ul {
    padding: 10px 0;
 }
-
 .animal-information ul li {
    list-style: none;
    line-height: 1.6;
 }
-
 .animal-information ul li span {
    color: brown;
    text-transform: capitalize;
    font-weight: bold;
 }
-
 .container p {
    line-height: 1.5;
    text-align: left;
