--- a/styles.css
+++ b/styles.css
@@ -10,13 +10,13 @@ body, div, span, h3, html, img, li, p, ul {
    font-size: 100%;
    font-weight: inherit;
    vertical-align: baseline;
+   -webkit-box-sizing: border-box;
+   -moz-box-sizing: border-box;
    box-sizing: border-box;
 }
 html {
-   box-sizing: border-box;
    overflow-y: scroll;
    font-size: 16px;
-   font-family: "Noto Sans", "san-serif", serif, arial, tahoma;
 }
 *, :after, :before {
    box-sizing: inherit
@@ -26,35 +26,38 @@ ul {
 }
 body {
    background-color: #fcfcfc;
+   font-family: "san-serif",serif,arial;
 }
 .container {
-   width: 330px;
+   width: 300px;
    border: 1px solid #ccc;
    background-color: #fff;
-   padding: 0 15px;
+   padding: 3px 15px;
    margin: 10px auto;
-   box-shadow: 6px 6px 0px rgba(0, 0, 0, 0.1);
+   box-shadow: 3px 3px 1px rgba(0, 0, 0, 0.1);
 }
 .container h3 {
    font-size: 28.8px;
-   font-size: 1.8rem;
+   font-size: 1.6rem;
    line-height: 1.8;
    text-transform: capitalize;
    color: brown;
+   text-align: center;
 }
 .container img {
-   width: 300px;
+   width: 100%;
+   max-width: 100%;
 }
 .fun-facts {
    font-style: italic;
 }
 .animal-information {
-   border: 1px solid #ccc;
-   width: 300px;
-   padding: 15px;
-   margin: 10px 0 14px;
+   width: 100%;
+   padding:20px;
+   margin: 10px 0;
    background-image: -webkit-linear-gradient(315deg, #fdfcfb 0%, #e2d1c3 100%);
    background-image: linear-gradient(135deg, #fdfcfb 0%, #e2d1c3 100%);
+   border: 1px solid #ccc;
 }
 .animal-information ul {
    padding: 10px 0;
@@ -64,11 +67,11 @@ body {
    line-height: 1.6;
 }
 .animal-information ul li span {
-   color: brown;
    text-transform: capitalize;
    font-weight: bold;
+   color:brown;
 }
 .container p {
-   line-height: 1.5;
+   line-height: 1.3;
    text-align: left;
 }
