--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,15 @@
 By : Husien Adel
 2/20/2018, 12:53:03 AM
 */
-body, div, span, h3, html, img, li, p, ul {
+body,
+div,
+span,
+h3,
+html,
+ img,
+ li,
+  p,
+  ul {
    padding: 0;
    border: 0;
    margin: 0;
@@ -14,20 +22,25 @@ body, div, span, h3, html, img, li, p, ul {
    -moz-box-sizing: border-box;
    box-sizing: border-box;
 }
+
 html {
    overflow-y: scroll;
    font-size: 16px;
 }
+
 *, :after, :before {
    box-sizing: inherit
 }
+
 ul {
    list-style: none;
 }
+
 body {
    background-color: #fcfcfc;
    font-family: "san-serif",serif,arial;
 }
+
 .container {
    width: 300px;
    border: 1px solid #ccc;
@@ -36,6 +49,7 @@ body {
    margin: 10px auto;
    box-shadow: 3px 3px 1px rgba(0, 0, 0, 0.1);
 }
+
 .container h3 {
    font-size: 28.8px;
    font-size: 1.6rem;
@@ -44,33 +58,40 @@ body {
    color: brown;
    text-align: center;
 }
+
 .container img {
    width: 100%;
    max-width: 100%;
 }
+
 .fun-facts {
    font-style: italic;
 }
+
 .animal-information {
    width: 100%;
-   padding:20px;
+   padding: 20px;
    margin: 10px 0;
    background-image: -webkit-linear-gradient(315deg, #fdfcfb 0%, #e2d1c3 100%);
    background-image: linear-gradient(135deg, #fdfcfb 0%, #e2d1c3 100%);
    border: 1px solid #ccc;
 }
+
 .animal-information ul {
    padding: 10px 0;
 }
+
 .animal-information ul li {
    list-style: none;
    line-height: 1.6;
 }
-.animal-information ul li span {
+
+.facts-labels {
    text-transform: capitalize;
    font-weight: bold;
    color:brown;
 }
+
 .container p {
    line-height: 1.3;
    text-align: left;
